@@ -1,19 +1,30 @@
 package cn.gjing;
 
-import org.apache.commons.codec.binary.Hex;
 import cn.gjing.ex.ParamException;
+import jdk.nashorn.internal.runtime.ScriptEnvironment;
+import org.apache.commons.codec.binary.Base64;
+import org.apache.commons.codec.binary.Hex;
 
-import javax.crypto.Mac;
+import javax.crypto.*;
 import javax.crypto.spec.SecretKeySpec;
 import java.lang.reflect.Method;
 import java.nio.charset.StandardCharsets;
 import java.security.MessageDigest;
 import java.security.NoSuchAlgorithmException;
+import java.security.SecureRandom;
 
 /**
  * @author Gjing
  **/
 public class EncryptionUtil {
+
+    private EncryptionUtil() {
+
+    }
+
+    public static EncryptionUtil of() {
+        return new EncryptionUtil();
+    }
 
     /**
      * MD5 encryption
@@ -21,7 +32,7 @@ public class EncryptionUtil {
      * @param body need to encryption
      * @return encrypted string
      */
-    public static String md5(String body) {
+    public String encodeMd5(String body) {
         StringBuilder buf = new StringBuilder();
         try {
             MessageDigest md = MessageDigest.getInstance("MD5");
@@ -47,74 +58,22 @@ public class EncryptionUtil {
 
     /**
      * BASE64编码
-     * @param source 要编码的字符串
+     *
+     * @param content 要编码的字符串
      * @return 编码过的字符串
      */
-    public static String encodeBase64(String source) {
-        Class<?> clazz;
-        Method encodeMethod;
-        try {
-            clazz = Class.forName("org.apache.commons.codec.binary.Base64");
-            encodeMethod = clazz.getMethod("encodeBase64", byte[].class);
-            return new String((byte[]) encodeMethod.invoke(null, (Object) source.getBytes()));
-        } catch (ClassNotFoundException e) {
-            String vm = System.getProperty("java.vm.name");
-            System.out.println(vm);
-            try {
-                if ("Dalvik".equals(vm)) {
-                    clazz = Class.forName("android.util.Base64");
-                    encodeMethod = clazz.getMethod("encode", byte[].class, int.class);
-                    return new String((byte[]) encodeMethod.invoke(null, source.getBytes(), 0));
-                } else {
-                    clazz = Class.forName("sun.misc.BASE64Encoder");
-                    encodeMethod = clazz.getMethod("encode", byte[].class);
-                    return (String) encodeMethod.invoke(clazz.newInstance(), (Object) source.getBytes());
-                }
-            } catch (Exception e1) {
-                return null;
-            }
-        } catch (Exception e) {
-            return null;
-        }
+    public String encodeBase64(String content) {
+        return Base64.encodeBase64String(content.getBytes());
     }
 
     /**
      * BASE64解码
-     * @param encodeSource 编码过的字符串
+     *
+     * @param content 编码过的字符串
      * @return 编码前的字符串
      */
-    public static String decodeBase64(String encodeSource) {
-        Class<?> clazz;
-        Method decodeMethod;
-        try {
-            clazz = Class.forName("org.apache.commons.codec.binary.Base64");
-            decodeMethod = clazz.getMethod("decodeBase64", byte[].class);
-            System.out.println("decodeBASE64-->" + clazz);
-            System.out.println("decodeMethod-->" + decodeMethod);
-            return new String((byte[]) decodeMethod.invoke(null, (Object) encodeSource.getBytes()));
-        } catch (ClassNotFoundException e) {
-            String vm = System.getProperty("java.vm.name");
-            System.out.println(vm);
-            try {
-                if ("Dalvik".equals(vm)) {
-                    clazz = Class.forName("android.util.Base64");
-                    decodeMethod = clazz.getMethod("decode", byte[].class, int.class);
-                    System.out.println("decodeBASE64-->" + clazz);
-                    System.out.println("decodeMethod-->" + decodeMethod);
-                    return new String((byte[]) decodeMethod.invoke(null, encodeSource.getBytes(), 0));
-                } else {
-                    clazz = Class.forName("sun.misc.BASE64Decoder");
-                    decodeMethod = clazz.getMethod("decodeBuffer", String.class);
-                    System.out.println("decodeBASE64-->" + clazz);
-                    System.out.println("decodeMethod-->" + decodeMethod);
-                    return new String((byte[]) decodeMethod.invoke(clazz.newInstance(), encodeSource));
-                }
-            } catch (Exception e1) {
-                return null;
-            }
-        } catch (Exception e) {
-            return null;
-        }
+    public String decodeBase64(String content) {
+        return new String(Base64.decodeBase64(content));
     }
 
     /**
@@ -124,7 +83,7 @@ public class EncryptionUtil {
      * @param secret 秘钥
      * @return 加密后的字符串
      */
-    public static String sha256Hmac(String str, String secret) {
+    public String encodeSha256Hmac(String str, String secret) {
         String hash;
         try {
             Mac sha256Hmac = Mac.getInstance("HmacSHA256");
@@ -139,12 +98,11 @@ public class EncryptionUtil {
     }
 
     /**
-     *
-     * @param str 需要加密的内容
+     * @param str    需要加密的内容
      * @param secret 秘钥
      * @return str 加密后的字符串
      */
-    public static String sha1Hmac(String str, String secret) {
+    public String sha1Hmac(String str, String secret) {
         try {
             SecretKeySpec signingKey = new SecretKeySpec(secret.getBytes(StandardCharsets.UTF_8), "HmacSHA1");
             Mac mac = Mac.getInstance("HmacSHA1");
@@ -157,12 +115,61 @@ public class EncryptionUtil {
     }
 
     /**
-     * 将加密后的字节数组转换成字符串
+     * AES加密字符串
+     *
+     * @param content  需要被加密的字符串
+     * @param password 加密需要的密码
+     * @return 密文
+     */
+    public String encodeAes(String content, String password) {
+        try {
+            KeyGenerator kgen = KeyGenerator.getInstance("AES");
+            kgen.init(128, new SecureRandom(password.getBytes()));
+            SecretKey secretKey = kgen.generateKey();
+            byte[] enCodeFormat = secretKey.getEncoded();
+            SecretKeySpec key = new SecretKeySpec(enCodeFormat, "AES");
+            Cipher cipher = Cipher.getInstance("AES");
+
+            byte[] byteContent = content.getBytes(StandardCharsets.UTF_8);
+            // 初始化为加密模式的密码器
+            cipher.init(Cipher.ENCRYPT_MODE, key);
+            return Base64.encodeBase64String(cipher.doFinal(byteContent));
+        } catch (Exception e) {
+            e.printStackTrace();
+        }
+        return null;
+    }
+
+    /**
+     * 解密AES加密过的字符串
+     *
+     * @param content  AES加密过过的内容
+     * @param password 加密时的密码
+     * @return 明文
+     */
+    public String decodeAes(String content, String password) {
+        try {
+            KeyGenerator kgen = KeyGenerator.getInstance("AES");
+            kgen.init(128, new SecureRandom(password.getBytes()));
+            SecretKey secretKey = kgen.generateKey();
+            byte[] enCodeFormat = secretKey.getEncoded();
+            SecretKeySpec key = new SecretKeySpec(enCodeFormat, "AES");
+            Cipher cipher = Cipher.getInstance("AES");
+            cipher.init(Cipher.DECRYPT_MODE, key);
+            return new String(cipher.doFinal(Base64.decodeBase64(content)),"utf-8");
+        } catch (Exception e) {
+            e.printStackTrace();
+        }
+        return null;
+    }
+
+    /**
+     * 将二进制转换成16进制
      *
      * @param b 字节数组
      * @return 字符串
      */
-    private static String byteArrayToHexString(byte[] b) {
+    public static String byteArrayToHexString(byte[] b) {
         StringBuilder hs = new StringBuilder();
         String stmp;
         for (int n = 0; b != null && n < b.length; n++) {
@@ -174,4 +181,5 @@ public class EncryptionUtil {
         }
         return hs.toString().toLowerCase();
     }
+
 }
